Solving problems in the create method.